Google tag Reformat

--- a/devotions-2020-04-26.html
+++ b/devotions-2020-04-26.html
@@ -115,11 +115,11 @@
             <div class="col">
                 <p>
                     O SON OF SPIRIT!<br>
-                    The best beloved of all things in My sight is Justice; turn not away therefrom if thou desirest Me, and neglect it not that I may confide in thee. By its aid thou shalt see with thine own eyes and not through the eyes of others, and shalt know of thine own knowledge and not through the knowledge of thy neighbor. Ponder this in thy heart; how it behooveth thee to be. Verily justice is My gift to thee and the sign of My loving-kindness. Set it then before thine eyes. 
+                    The best beloved of all things in My sight is Justice; turn not away therefrom if thou desirest Me, and neglect it not that I may confide in thee. By its aid thou shalt see with thine own eyes and not through the eyes of others, and shalt know of thine own knowledge and not through the knowledge of thy neighbor. Ponder this in thy heart; how it behooveth thee to be. Verily justice is My gift to thee and the sign of My loving-kindness. Set it then before thine eyes.
                 </p>
-                <p>                    
+                <p>
                     O SON OF MAN! <br>
-                    Veiled in My immemorial being and in the ancient eternity of My essence, I knew My love for thee; therefore I created thee, have engraved on thee Mine image and revealed to thee My beauty.                   
+                    Veiled in My immemorial being and in the ancient eternity of My essence, I knew My love for thee; therefore I created thee, have engraved on thee Mine image and revealed to thee My beauty.
                 </p>
                 <p class="text-right">
                     Bah&aacute;&#39;u&#39;ll&aacute;h
@@ -279,6 +279,15 @@
             $('[data-toggle="popover"]').popover()
         })
     </script>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-7TGV0JXTZY"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+
+            gtag('config', 'G-7TGV0JXTZY');
+        </script>
 </body>
 
 </html>
