Font fix Spelling Link checks

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body,
         html {
@@ -22,7 +24,7 @@
         }
 
         h2 {
-            font-family: 'Amatic SC', cursive;
+            font-family: 'Amatic SC', sans-serif;
             font-size: 3em;
         }
 
@@ -124,7 +126,7 @@
                 <p>
                     We cannot see the damage so readily. Yet the <a href="javascript:void(0)" data-toggle="popover"
                         data-placement="bottom" data-html="true"
-                        data-content="U.S. Global Change Research Program, <a target='_blank' href='https://nca2018.globalchange.gov/'>Fourth National Climate Assessment</a>">science
+                        data-content="U.S. Global Change Research Program, <a target='_blank' href='https://www.globalchange.gov/'>National Climate Assessment</a>">science
                         is abundantly clear</a>: these and other gases are driving up the average temperature of the
                     Earth,
                     causing untold suffering through droughts, famines,
@@ -143,8 +145,8 @@
                 <h2>Key Health Facts from the World Health Organization</h2>
             </div>
             <div class="col-sm-7">
-                <p>Consider the health impacts of climate change, as summarized by the <acronym
-                        title="World Health Organization">WHO</acronym>:</p>
+                <p>Consider the health impacts of climate change, as summarized by the <abbr
+                        title="World Health Organization">WHO</abbr>:</p>
                 <blockquote>
                     <p>
                         &ldquo;Between 2030 and 2050, climate change is expected to cause approximately 250,000
@@ -537,12 +539,12 @@
             </div>
             <div class="col-sm-8">
                 <p>
-                    The agriculatural sector, while attempting to feed the world, is also a major contributor to
+                    The agricultural sector, while attempting to feed the world, is also a major contributor to
                     greenhouse gas emissions. Again we can see the urgent need for individual action: taking more
                     care with the food we purchase and choosing to reduce the consumption of animal products (especially
                     damaging:
                     cow, sheep, and camel meat and milk products). These are changes that begin with the individual,
-                    and continue through to the community (restaurants, institutional foodservice, etc.).
+                    and continue through to the community (restaurants, institutional foodservices, etc.).
                 </p>
                 <p>
                     It is interesting and gratifying to see that
@@ -601,11 +603,11 @@
                 </p>
                 <p class="text-right mb-4">
                     <a href="javascript:void(0)" data-toggle="popover" data-placement="bottom" data-html="true"
-                        data-content="Bah&aacute;&#39;u&#39;ll&aacute;h, quoted in the compilation <a href='www.bahai.org/r/825655618' target='_blank'>Ḥuq&uacute;qu&#39;ll&aacute;h&mdash;The Right of God</a>">Bah&aacute;&#39;u&#39;ll&aacute;h</a>
+                        data-content="Bah&aacute;&#39;u&#39;ll&aacute;h, quoted in the compilation <a href='https://www.bahai.org/r/825655618' target='_blank'>Ḥuq&uacute;qu&#39;ll&aacute;h&mdash;The Right of God</a>">Bah&aacute;&#39;u&#39;ll&aacute;h</a>
                 </p>
                 <p>
                     Is this a recipe for austerity? The call for moderation in the Bah&aacute;&#39;&iacute; Faith is not
-                    a call for ascetism. Likewise, the call to lower our use of electricity, to shift to a more
+                    a call for asceticism. Likewise, the call to lower our use of electricity, to shift to a more
                     plant-rich
                     diet, to spend more of our precious wealth on education of girls, to drive less, and ultimately
                     to spend more time in prayer, reflection, study, and action is not a call for a life
@@ -681,7 +683,7 @@
                         changes.
                     </li>
                     <li>
-                        The <acronym title="Environmental Protection Agency">EPA</acronym>'s
+                        The <abbr title="Environmental Protection Agency">EPA</abbr>'s
                         <a href="https://www3.epa.gov/carbon-footprint-calculator/" target="_blank">Carbon Footprint
                             Calculator</a> facilitates either a rough "back of the envelope" calculation or
                         detailed calculation based on actual energy usage, and includes an Excel
@@ -698,13 +700,8 @@
                         and compete in the annual Cool Congregations challenge.
                     </li>
                     <li>
-                        <a href="http://climatecalculator.net/en" target="_blank">WWF's Climate Calculator</a> is tuned
+                        <a href="http://climatecalculator.net" target="_blank">WWF's Climate Calculator</a> is tuned
                         to evaluation of the climate impact of business office activities.
-                    </li>
-                    <li>
-                        <a href="https://livingthechange.net/" target="_blank">Living the Change: Faith choices for a
-                            flourishing world</a> encourages a public pledge to protect the earth, including a list of
-                        individual actions we can each consider in our personal climate journey.
                     </li>
                 </ul>
             </div>
@@ -730,7 +727,7 @@
                         political campaigning and lobbying. Nonetheless, some of the actions promoted by these
                         organizations might not be fully consistent with Bah&aacute;&#39;&iacute; principles of
                         non-involvement in politics. We are not endorsing any specific campaign and encourage
-                        readers to evaluate any call to action/activism dilligently.
+                        readers to evaluate any call to action/activism diligently.
                     </p>
             </div>
         </div>
@@ -747,10 +744,10 @@
                 <p>
                     Original text, photos, and web site design are copyright &copy; 2020, Stephen A. Fuqua, and
                     available
-                    for re-use under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative
+                    for re-use under a <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">Creative
                         Commons Attribution 4.0 International License</a>.
                 </p>
-                <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="_blank"><img
+                <p><a rel="license" href="https://creativecommons.org/licenses/by/4.0/" target="_blank"><img
                             alt="Creative Commons License" style="border-width:0"
                             src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
             </div>
@@ -771,14 +768,15 @@
             $('[data-toggle="popover"]').popover()
         })
     </script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7TGV0JXTZY"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-7TGV0JXTZY"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
 
-    gtag('config', 'G-7TGV0JXTZY');
-    </script>
+            gtag('config', 'G-7TGV0JXTZY');
+        </script>
 </body>
 
 </html>
